--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@ag-grid-community/core": "^23.2.1",
     "@ag-grid-community/react": "^23.2.1",
     "@ag-grid-enterprise/column-tool-panel": "^23.2.1",
+    "@ag-grid-enterprise/filter-tool-panel": "^23.2.1",
     "@ag-grid-enterprise/menu": "^23.2.1",
     "@ag-grid-enterprise/row-grouping": "^23.2.1",
+    "@ag-grid-enterprise/set-filter": "^23.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
