--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^23.2.1",
     "@ag-grid-community/core": "^23.2.1",
+    "@ag-grid-community/csv-export": "^23.2.1",
     "@ag-grid-community/react": "^23.2.1",
     "@ag-grid-enterprise/column-tool-panel": "^23.2.1",
+    "@ag-grid-enterprise/excel-export": "^23.2.1",
     "@ag-grid-enterprise/filter-tool-panel": "^23.2.1",
     "@ag-grid-enterprise/menu": "^23.2.1",
     "@ag-grid-enterprise/row-grouping": "^23.2.1",
