--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.19.2",
     "axios-hooks": "^2.1.0",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "serve": "^11.3.2",
